# student-evaluation-system

./: .env.example  .gitignore  DEPLOYMENT.md  configure-env.sh  deploy-https.sh  deploy-native-full.sh  deploy-native.sh  deploy.sh  docker-compose.yml  nginx-https.conf  nginx.conf  renew-cert.sh  student-evaluation-backend.service  student-evaluation-celery.service
backend/: Dockerfile  TEST_SUMMARY.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 000001_init_rules.py  000002_assessments.py  000003_evaluations.py  000004_pairwise.py  30bcaedbd8ac_add_manual_decision_to_applicant_gating.py  7ee2dbd6253e_rename_source_url_to_rule_set_url_in_.py  84f8dfef1946_remove_specialinstitutionrule_table.py  8e3c8a1d2754_initial_migration_with_all_tables.py  b9f2d1a7a3c1_add_agent_models_to_assessment_runs.py  cc3b1f5e2b42_add_run_logs_table.py  (+4 more)
backend/app/: celery_app.py  config.py  main.py
backend/data/: china_program_rules.yaml  china_ucl_universities.json  china_universities.json  india_categories.json  india_institutions.json
backend/model_comparison_tests/: compare_url_extractor_results.py  gpt41_url_extractor_results.json  o3mini_url_extractor_results.json  pairwise_comparison_results.json  test_gpt41.py  test_o3mini.py  test_pairwise_comparison.py
backend/scripts/: clear_non_rules_tables.py  init_db.py  list_programs.py  migrate.py  seed_all.py  seed_china_india_rules.py  seed_degree_equivalencies.py  seed_english_rules_full.py
backend/tests/: conftest.py
bib/: references.bib
(+120 files in other folders)
